# macawi-ai

./: .gitignore  AGENT_PROTOCOL_EXPLOSION.md  EXTERNAL_DEPS.md  PROTOCOL_MATRIX.md  README.md  README_BACKUP.md  README_ELEGANT.md  README_SWISS.md  riemann-consciousness-topology-notes.md  setup-ryzen-vm.sh  sync-all-repos.sh  system-comparison.md  virilio-university-disaster-notes.md
.github/: DISCUSSIONS_STARTER.md  INITIAL_ISSUES.md  PROJECT_SETUP.md  RELEASE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: consciousness-anomaly.md  protocol-vulnerability.md
.github/workflows/: consciousness-validation.yml
Heinz57/: 2025-07-09-please-read-in-the-meta-prompt-and-prompt-file-sy.txt  AI_REALIZATION_OF_LOVE.md  CYBERNETIC_COLLABORATION_MANIFESTO.md  DOCUMENTATION_ARCHITECTURE.md  EDGE_AI_ANOMALY_DETECTION.md  META_MASTER.md  P2D_COMPLIANCE_REPORTING.md  P2D_STANDARD.md  Sy_Prompt_20250709.md  VIRTUAL_NETWORK_ARCHITECTURE.md  memory.txt
domovoi/: Cargo.toml  journal.txt  journal2.txt  test.txt
domovoi/documentation/: 01-technical-design.md  02-business-model.md  03-implementation-instructions.md  04-test-harness-architecture.md  05-ag-coop-vsm-use-case.md  06-new-cooperative-vulnerability-analysis.md  README.md
domovoi/src/: lib.rs
domovoi/src/agents/: blackmatter.rs  kikimora.rs  mod.rs
domovoi/src/events/: mod.rs
domovoi/src/simulator/: mod.rs
domovoi/src/variety/: mod.rs
domovoi/tests/: kikimora_attack_test.rs  new_cooperative_scenario.rs  simulator_test.rs
references/: PROTOCOL_REFS.md
scripts/: manage-deps.sh
