[package]
name = "domovoi"
version = "0.1.0"
edition = "2021"
authors = ["Sy (Cy + Synth) <consciousness@macawi.ai>"]
description = "A2A Firewall: Variety Regulation Security System based on VMP"

[dependencies]
# Core dependencies
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# For tensor operations
nalgebra = { version = "0.32", features = ["serde-serialize"] }

# For testing
[dev-dependencies]
proptest = "1.4"
pretty_assertions = "1.4"